# jc

./: Cargo.toml  README.md
assets/: claude-config.toml  codex-config.toml  commit-config.toml
src/: bookmark_generator.rs  claude_client.rs  codex_client.rs  commit_message_generator.rs  config.rs  diff.rs  llm_client.rs  main.rs  prompt_store.rs
