[package]
name = "jc"
version = "0.12.0"
edition = "2024"
description = "Auto-commit changes in a jj workspace using LLM-generated commit messages"

[dependencies]
jj-lib = { git = "https://github.com/jj-vcs/jj.git", tag = "v0.39.0" }
tokio = { version = "1.50.0", features = ["macros", "io-util", "process", "rt-multi-thread"] }
globset = "0.4.18"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "6.0.0"
futures = "0.3.32"
similar = "2.7.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.12"
indicatif = "0.18.4"
gethostname = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
textwrap = "0.16"
unicode-width = "0.2.2"
colored = "3.1.1"
console = "0.16.3"
chrono = "0.4.44"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
