[package]
name = "jc"
version = "0.13.2"
edition = "2024"
description = "Auto-commit changes in a jj workspace using LLM-generated commit messages"

[dependencies]
jj-lib = { git = "https://github.com/jj-vcs/jj.git", tag = "v0.40.0" }
tokio = { version = "1.50", features = ["macros", "io-util", "process", "rt-multi-thread"] }
globset = "0.4"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
dirs = "6.0"
futures = "0.3"
similar = "3.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
indicatif = "0.18"
gethostname = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
textwrap = "0.16"
unicode-width = "0.2"
colored = "3.1"
console = "0.16"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
